--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script> -->
   </head>
-  <body class="background">
+  <body class="about">
 
 
     <!-- Nav -->
@@ -342,3 +342,4 @@
     ></script>
   </body>
 </html>
+
