--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script> -->
   </head>
-  <body class="about">
+  <body style="background-image: url(Image/bf-header.jpg);">
 
 
     <!-- Nav -->
@@ -342,4 +342,5 @@
     ></script>
   </body>
 </html>
+
 
